--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+quagga (0.99.24.1-2.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * enable fpm 
+
+ -- Guohan Lu <gulv@microsoft.com>  Sat, 18 Jul 2015 16:10:47 -0700
+
 quagga (0.99.24.1-2) unstable; urgency=low
 
   * Renamed manpage pim.8 to quagga-pim.8 as the former name is already used
